# Project

./: .gitignore  Final.md  README.md  Readme.md
FinalPractice2024/: Final.md  Вводная инфа.md
docs/: Вводная инфа.md  Порядок запуск узлов.md
docs/obsidian_default_config/: app.json  community-plugins.json  workspace.json
docs/obsidian_default_config/plugins/folder-note-plugin/: data.json
docs/obsidian_default_config/plugins/obsidian-folder-index/: data.json
docs/obsidian_default_config/plugins/obsidian-git/: data.json
src/: moveit_servo.md  moveit_servo_vanilla_1.1.14.md
src/moveit_servo/: CMakeLists.txt  package.xml
src/moveit_servo/cfg/: AngularSpeedScale.cfg  LinearSpeedScale.cfg
src/moveit_servo/config/: ur_simulated_config.yaml
src/moveit_servo/include/: build_stamp.h
src/moveit_servo/include/moveit_servo/: bullet_collision.h  collision_check.h  low_pass_filter.h  servo.h  servo_calcs.h  servo_parameters.h  stop_distance_collision_check.h  threshold_distance_check.h
src/moveit_servo/include/moveit_servo/3rdparty_header/: expected.hpp
src/moveit_servo/include/moveit_servo/command_publishers/: command_publisher_interface.h  float64_publisher.h  pose_publisher.h  trajectory_publisher.h
src/moveit_servo/include/moveit_servo/extensions/: value_converter.h
src/moveit_servo/include/moveit_servo/kdl_based_extensions/: command_validator.h
src/moveit_servo/launch/: spacenav_joy.launch  spacenav_teleop_tools.launch  ur5_servo.launch
src/moveit_servo/src/: bullet_collision.cpp  collision_check.cpp  low_pass_filter.cpp  servo.cpp  servo_calcs.cpp  servo_server.cpp  stop_distance_collision_check.cpp  threshold_distance_check.cpp
src/moveit_servo/src/command_publishers/: command_publisher_interface.cpp  float64_publisher.cpp  pose_publisher.cpp  trajectory_publisher.cpp
src/moveit_servo/src/extensions/: value_converter.cpp
src/moveit_servo/src/kdl_based_extensions/: command_validator.cpp
src/moveit_servo/src/servo_calcs/: calc_single_iteration.cpp  cartesian_control.cpp  joint_jog_control.cpp
src/spacenav_sim/: CMakeLists.txt  package.xml
src/spacenav_sim/include/: controline.cpp  controline.h  hotkey.cpp  hotkey.h  mousekeyline.cpp  mousekeyline.h  spacenavform.cpp  spacenavform.h  spacenavform.ui
src/spacenav_sim/src/: main.cpp
src/tms_common/: CMakeLists.txt  package.xml
src/tms_common/config/moveit_servo/: spacenav_via_teleop_tools.yaml  ur_config.yaml  ur_config_vanilla.yaml
src/tms_common/config/rviz/: rviz.rviz
src/tms_common/config/ur_driver/: ur5_controllers.yaml
src/tms_common/launch/: spacenav_joy.launch  ur5_demo_driver.launch  ur5_servo.launch
src/tms_common/launch/included/: ur_common.launch
src/tms_ur5_series_moveit_config/: CMakeLists.txt  README.md  package.xml
src/tms_ur5_series_moveit_config/config/: fake_controllers.yaml  ur5.srdf.xacro
src/tms_ur5_series_moveit_config/config/ur5_config/: chomp_planning.yaml  (+2 more)
src/tms_ur5_series_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  ompl_chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
src/tms_ur5_series_moveit_config/xacro_macros/: state_macro.xacro
src/tms_ur_description/: CMakeLists.txt  package.xml
src/tms_ur_description/cfg/: view_robot_ur5.rviz
src/tms_ur_description/launch/: load_ur.launch  load_ur5.launch  view_ur5.launch
src/tms_ur_description/urdf/: ur.xacro
(+33 files in other folders)
